--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>login nodejs mysql</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.1/tailwind.main.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/c5.10.0/css/all.css">
+
+</head>
+<body>
+
+<nav class="flex py-5 bg-green-500 text-white px-24">
+    <div class="w-1/2 px-12 mr-auto">
+        <h1 class="text-2x1 font-bold">
+            My application
+        </h1>
+    </div>
+    <ul class="w-1/2 px-16 ml-auto flex justify-end pt-1">
+<li class="nav-item px-4">
+    <a href="" class="">My tasks</a>
+</li>
+    </ul>
+</nav>
 {{{body}}}
+
+</body>
+</html>
