--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -19,7 +19,10 @@
     </div>
     <ul class="w-1/2 px-16 ml-auto flex justify-end pt-1">
 <li class="nav-item px-4">
-    <a href="" class="">My tasks</a>
+    <a href="" class="">login</a>
+</li>
+<li class="nav-item px-4">
+    <a href="" class="">register</a>
 </li>
     </ul>
 </nav>
